# mf-prior-bench

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  Makefile  README.md  ROADMAP.md  config.json  correlations.py  example-rs.py  example1.py  generate_priors.py  mkdocs.yaml  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: citation_cff.yml  docs.yml  pre-commit.yml  pytest.yml
docs/: Makefile  api.rst  conf.py  index.md  index.rst  installation.rst  priors.md  quickstart.md  setup.md
docs/examples/: integrating_objective_function_benchmark.md  integrating_tabular_benchmark.md  jahs-bench.md  lcbench-tabular.md  mfh.md  pd1.md  yahpo-gym.md
latest/: 404.html  api_generator.py  index.html  objects.inv
latest/api/SUMMARY/: index.html
latest/api/mfpbench/benchmark/: index.html
latest/api/mfpbench/config/: index.html
latest/api/mfpbench/correlations/: index.html
latest/api/mfpbench/get/: index.html
latest/api/mfpbench/priors/: index.html
latest/api/mfpbench/result/: index.html
latest/api/mfpbench/resultframe/: index.html
latest/api/mfpbench/setup_benchmark/: index.html
latest/api/mfpbench/stats/: index.html
latest/api/mfpbench/tabular/: index.html
latest/api/mfpbench/util/: index.html
latest/examples/integrating_objective_function_benchmark/: index.html
latest/examples/integrating_tabular_benchmark/: index.html
latest/examples/jahs-bench/: index.html
latest/examples/lcbench-tabular/: index.html
latest/examples/mfh/: index.html
latest/examples/pd1/: index.html
latest/examples/yahpo-gym/: index.html
latest/priors/: index.html
latest/quickstart/: index.html
latest/search/: search_index.json
latest/setup/: index.html
main/: .buildinfo  api.html  commands.html  faq.html  genindex.html  glossary.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: api.doctree  commands.doctree  environment.pickle  faq.doctree  glossary.doctree  index.doctree  installation.doctree
main/.doctrees/advanced_usage/: index.doctree
main/.doctrees/api/: mfp_bench.doctree  mfp_bench.myfile.doctree
main/.doctrees/basic_usage/: index.doctree
main/.doctrees/examples/: index.doctree  myexample.doctree
main/_downloads/203015fe89635e9b71fb128817edec8d/: myexample.ipynb
main/_modules/: index.html
main/_modules/mfp_bench/: myfile.html
main/_sources/api/: mfp_bench.myfile.rst.txt  mfp_bench.rst.txt
main/_sources/examples/: index.rst.txt  myexample.rst.txt
main/advanced_usage/: index.html
main/api/: mfp_bench.html  mfp_bench.myfile.html
main/basic_usage/: index.html
main/examples/: index.html  myexample.html
mfp_bench/: __init__.py
mfpbench/: __init__.py  __main__.py  benchmark.py  config.py  correlations.py  download.py  priors.py  result.py  resultframe.py  stats.py  util.py
mfpbench/jahs/: __init__.py  benchmark.py  config.py  priors.py  result.py  spaces.py
mfpbench/pd1/: README.md  __init__.py  benchmark.py  benchmark_old._py  benchmark_old.py.py  config.py  investigation_data.md  process_script.py  result.py  space.py
mfpbench/pd1/benchmarks/: __init__.py  cifar100.py  imagenet.py  lm1b.py  translate_wmt.py  uniref50.py
mfpbench/pd1/processing/: columns.py  process_script.py
mfpbench/pd1/surrogate/: train_xgboost.py  training.py  xgboost_space.py
mfpbench/synthetic/: __init__.py  benchmark.py
mfpbench/synthetic/hartmann/: __init__.py  benchmark.py  config.py  generators.py  hartmann_priors.py  priors.py  result.py
mfpbench/yahpo/: __init__.py  benchmark.py  config.py  result.py
mfpbench/yahpo/benchmarks/: __init__.py  lcbench.py  nb301.py
mfpbench/yahpo/benchmarks/iaml/: __init__.py  iaml.py  iaml_glmnet.py  iaml_ranger.py  iaml_rpart.py  iaml_super.py  iaml_xgboost.py
mfpbench/yahpo/benchmarks/rbv2/: __init__.py  rbv2.py  rbv2_aknn.py  rbv2_glmnet.py  rbv2_ranger.py  rbv2_rpart.py  rbv2_super.py  rbv2_svm.py  rbv2_xgboost.py
priors/: cifar100-wide_resnet-2048-at25.yaml  cifar100-wide_resnet-2048-bad.yaml  cifar100-wide_resnet-2048-good.yaml  cifar100-wide_resnet-2048-gpt.yaml  cifar100-wide_resnet-2048-medium.yaml  iaml_glmnet-1067-bad.yaml  iaml_glmnet-1067-good.yaml  iaml_glmnet-1067-medium.yaml  iaml_glmnet-1489-bad.yaml  iaml_glmnet-1489-good.yaml  iaml_glmnet-1489-medium.yaml  iaml_glmnet-40981-bad.yaml  iaml_glmnet-40981-good.yaml  iaml_glmnet-40981-medium.yaml  iaml_glmnet-41146-bad.yaml  iaml_glmnet-41146-good.yaml  iaml_glmnet-41146-medium.yaml  iaml_rpart-1067-bad.yaml  iaml_rpart-1067-good.yaml  iaml_rpart-1067-medium.yaml  iaml_rpart-1489-bad.yaml  iaml_rpart-1489-good.yaml  iaml_rpart-1489-medium.yaml  iaml_rpart-40981-bad.yaml  iaml_rpart-40981-good.yaml  iaml_rpart-40981-medium.yaml  iaml_rpart-41146-bad.yaml  iaml_rpart-41146-good.yaml  iaml_rpart-41146-medium.yaml  imagenet-resnet-512-at25.yaml  imagenet-resnet-512-bad.yaml  imagenet-resnet-512-good.yaml  imagenet-resnet-512-gpt.yaml  imagenet-resnet-512-medium.yaml  jahs_CIFAR10-bad.yaml  jahs_CIFAR10-good.yaml  jahs_CIFAR10-medium.yaml  jahs_CIFAR10-really_bad.yaml  jahs_CIFAR10-really_good.yaml  jahs_ColorectalHistology-bad.yaml  (+696 more)
src/mfpbench/: __init__.py  __main__.py  benchmark.py  config.py  get.py  metric.py  result.py  setup_benchmark.py  tabular.py  util.py
src/mfpbench/jahs/: benchmark.py
src/mfpbench/lcbench_tabular/: benchmark.py
src/mfpbench/nb201_tabular/: benchmark.py
src/mfpbench/pd1/: benchmark.py
src/mfpbench/pd1/benchmarks/: cifar100.py  imagenet.py  lm1b.py  translate_wmt.py  uniref50.py
src/mfpbench/pd1/processing/: process_script.py
src/mfpbench/pd1/surrogate/: train_xgboost.py  training.py  xgboost_space.py
src/mfpbench/pd1_tabular/: benchmark.py
src/mfpbench/synthetic/: __init__.py
src/mfpbench/taskset_tabular/: __init__.py  benchmark.py
src/mfpbench/yahpo/: benchmark.py  config.py  result.py
tests/: conftest.py  test_all.py  test_benchmarks.py  test_get_with_prior_path_as_str.py  test_hartmann.py  test_metric.py  test_myfile.py  test_result_frame.py
tests/jahs/: test_installation.py
(+54 files in other folders)
