# For TOML reference
# https://learnxinyminutes.com/docs/toml/
[tool.poetry]
name = "mf-prior-bench"
version = "0.1.0"
description = ""
authors = ["eddiebergman <eddiebergmanhs@gmail.com>"]
license = "MIT"
packages = [
    { include = "mfpbench" }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<=3.10"
numpy = "1.*"
yahpo-gym = "1.0.1"
jahs-bench = {git = "https://github.com/automl/jahs_bench_201.git", rev = "3cd0057ec1f61e770a95124957c3d58eae35929b"}

[tool.poetry.dev-dependencies]
pytest = "4.6"
pytest-cov = "^3"
pytest-cases = "^3"
automl-sphinx-theme = "^0.1.12"
isort = "^5.10.1"
black = "^22.6.0"
pydocstyle = "^6.1.1"
pre-commit = "^2.20.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]             # path to the test directory
minversion = "3.7"
addopts = "--cov=mfpbench" # Should be package name

[tool.coverage.run]
branch = true
context = "mfpbench" # Should be package name
omit = [
    "mfpbench/__init__.py", # Has variables only needed for setup.py
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    '\.\.\.',
    "raise NotImplementedError",
    "if TYPE_CHECKING",
] # These are lines to exclude from coverage

[tool.black]
target-version = ['py37']

[tool.isort]
py_version = "37"
profile = "black" # Play nicely with black
src_paths = ["mfpbench", "tests"]
known_types = ["typing", "abc"] # We put these in their own section "types"
known_test = ["tests"]
known_first_party = ["mfpbench"]
sections = [
    "FUTURE",
    "TYPES",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "TEST",
    "LOCALFOLDER",
] # section ordering
multi_line_output = 3 # https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html

[tool.pydocstyle]
convention = "numpy"
add-ignore = [ # http://www.pydocstyle.org/en/stable/error_codes.html
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary and description
    "D210", # No whitespaces allowed surrounding docstring text
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "D404", # First word of docstring should not be this
    "D413", # Missing blank line after last section
    "D415", # First line should end with a period, question mark, or exclamation point
]

[[tool.mypy.overrides]]
module = [
    "ConfigSpace.*",
    "pandas.*",
    "jahs_bench.*",
    "yahpo_gym.*",
    "pytest.*",
]
ignore_missing_imports = true

